Logistics - v03 - Controllers and services for Driver and AuthenticationInfo, Open API specification corrected, small DB and entities changes
