# src/main/java/com/tsystems/logistics/logistics_vp/entities/Driver.java
@@ -2,11 +2,9 @@ package com.tsystems.logistics.logistics_vp.entities;
 
 import com.tsystems.logistics.logistics_vp.enums.Busy;
 import com.tsystems.logistics.logistics_vp.enums.DriverStatus;
+import com.tsystems.logistics.logistics_vp.enums.OrderAcceptance;
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 
 @Entity
 @Table(name = "drivers", schema = "logistics")
@@ -14,6 +12,7 @@ import lombok.Setter;
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
+@Builder
 public class Driver {
     //CREATE TABLE logistics.drivers (
     //personal_number INT NOT NULL AUTO_INCREMENT,
@@ -28,6 +27,7 @@ public class Driver {
     //current_state VARCHAR(30) NOT NULL,
     //current_truck_number VARCHAR(7),
     //current_order_id INT,
+    //order_acceptance ENUM('YES','NO'),
     //CONSTRAINT chk_working_hours CHECK (working_hours_in_current_month BETWEEN 0 AND 176),
     //PRIMARY KEY personal_number_pk (personal_number),
     //FOREIGN KEY authentication_driver_fk (driver_authentication_id) REFERENCES logistics.authentication_info(id),
@@ -62,11 +62,11 @@ public class Driver {
 
     @Enumerated(EnumType.STRING)
     @Column(name = "status", columnDefinition = "ENUM('REST','DRIVING') DEFAULT 'REST'")
-    private DriverStatus status;
+    private DriverStatus status = DriverStatus.REST;
 
     @Enumerated(EnumType.STRING)
     @Column(name = "busy", columnDefinition = "ENUM('YES','NO') DEFAULT 'NO'")
-    private Busy busy;
+    private Busy busy = Busy.NO;
 
     @Column(name = "current_city", length = 30, nullable = false)
     private String currentCity;
@@ -85,4 +85,8 @@ public class Driver {
     @ManyToOne
     @JoinColumn(name = "current_order_id", referencedColumnName = "order_id")
     private Order currentOrderId;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "order_acceptance", columnDefinition = "ENUM('YES','NO')")
+    private OrderAcceptance orderAcceptance;
 }
